# insiderMarket

./: .env.example  .gitignore  Dockerfile  README.md  TRADER_COLLECTION_SUMMARY.md  debug_market_collection.py  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_add_trader_url_field.py  002_add_activity_table.py
db/: init.sql
src/polymarket_insider/: __init__.py  __main__.py  cli.py
src/polymarket_insider/api/: client.py
src/polymarket_insider/collectors/: market_collector.py  trader_collector.py
src/polymarket_insider/core/: config.py  database.py  logging.py
src/polymarket_insider/models/: __init__.py  activity.py  base.py  bet.py  market.py  position.py  trader.py  trader_score.py
